Fixed some layout problems.

--- a/complete-bullshit.css
+++ b/complete-bullshit.css
@@ -1,8 +1,8 @@
 body {
-	font-family:"Century Gothic", "Arial", sans-serif;
+	font-family:"Century Gothic","Apple Gothic",AppleGothic,"URW Gothic L","Avant Garde",Futura,sans-serif;
 	font-size:14pt;
 	color:#FCFF00;
-	background-color:#444
+	text-align:center;
 }
 
 a {
@@ -10,15 +10,28 @@ a {
   text-decoration: inherit;
 }
 
+#center {
+	display:inline-block;
+	overflow:hidden;
+	border: 4px solid black;
+	border-radius: 32px;
+	margin: 50px auto;
+	background-color:#3800E0;
+}
+
+#header {
+	text-align:left;
+}
+
 #logo {
 	margin-top:8px;
-	margin-left:24px;
+	margin-left:12px;
+	margin-right:3px;
 	display:inline-block;
 }
 
 #title {
-	display:block;
-	float:right;
+	display:inline-block;
 	padding-right:8px;
 }
 
@@ -26,17 +39,15 @@ a {
 	font-size:56pt;
 	font-weight:bold;
 	letter-spacing:-0.1em;
-	/*height:1em;*/
 	margin-top:-12px;
 	margin-bottom:-16px;
 	margin-right:16px;
 }
 
 #title-row {
-	font-size:16pt;
-	letter-spacing:0.5em;
+	font-size:14pt;
+	letter-spacing:0.4em;
 	height:30px;
-	margin-bottom:5px;
 }
 
 #secondary-title {
@@ -61,18 +72,11 @@ a {
 	background-color:#FCFF00;
 }
 
-#center {
-	overflow:hidden;
-	width: 800px;
-	/*height:700px;*/
-	border: 4px solid black;
-	border-radius: 32px;
-	margin: 50px auto;
-	background-color:#3800E0;
-}
-
 #bs-container {
+	text-align:left;
 	height:500px;
+	width:100%;
+	overflow:hidden;
 }
 
 .bs-cell {
